[project]
name = "wappa-docs"
version = "0.1.0"
description = "Wappa Framework Documentation - WhatsApp Business API Framework for Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocs-mermaid2-plugin>=1.1.0",
    "pymdown-extensions>=10.3.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-redirects>=1.2.0",
]
